--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
 .App {
   text-align: center;
+  width: 100vmax;
+  padding-left: 400px;
 }
 
 .App-logo {
@@ -9,9 +11,21 @@
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+    animation: App-logo-spin infinite 8s linear;
   }
 }
+
+.App-logo-2 {
+  height: 40vmin;
+  pointer-events: none;
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  .App-logo-2 {
+    animation: App-logo-2-spin infinite 4s linear;
+  }
+}
+
 
 .App-header {
   background-color: #282c34;
@@ -35,4 +49,31 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+@keyframes App-logo-2-spin {
+  from {
+    transform: rotate(360deg);
+  }
+  to {
+    transform: rotate(0deg);
+  }
+}
+
+.Button-download {
+  width: 200px;
+  height: 50px;
+  left: 100px;
+  top: 846px;
+  
+  background: #4B4DF7;
+  border-radius: 25px;
+
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 20px;
+  /* identical to box height */
+  color: #FFFFFF;
 }
